<resources>
    <string name="app_name">Punter</string>
    <string name="fetch_games_button_text">Fetch games</string>
    <string name="generate_questions">Generate questions</string>
    <string name="get_questions">Get questions</string>
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="home">Home</string>
    <string name="new_game">New Game</string>
    <string name="score_label">Game over!!\nYour score is :</string>
    <string name="debug_menu_item">Debug</string>
    <string name="loading_label">Loading …</string>
    <string name="sign_in_why">Sign in to Play Games Services to participate in Leaderboards</string>
    <string name="leaderboards">LeaderBoards</string>
    <string name="play_games_api_app_id">481293289173</string>
    <string name="leaderboard_high_score">CgkI1Y3D-oAOEAIQAA</string>
    <string name="appwidget_text">Punter</string>
    <string name="add_widget">Add Punter High Score Widget</string>
    <string name="home_nav_label">Home</string>
    <string name="play_quizz_nav_label">Play quizz</string>
    <string name="leaderboards_nav_label">Leaderboards</string>
    <string name="sign_out_nav_label">Sign out</string>
    <string name="debug_nav_label">Debug</string>
    <string name="sign_in_nav_label">Sign In</string>
    <string name="player_profile_icon_content_description">Player profile icon</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


</resources>
