<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.impl.DebugActivity">

    <include layout="@layout/toolbar" />

    <Button
        android:id="@+id/fetch_games_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_games_button_text" />

    <Button
        android:id="@+id/generate_questions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_questions" />

    <Button
        android:id="@+id/get_questions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_questions" />

    <Button
        android:id="@+id/main_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_main_activity" />

</LinearLayout>
