<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.impl.EndGameFragment">

    <TextView
        android:id="@+id/end_game_text"
        style="@style/FatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/score_label" />

    <TextView
        android:id="@+id/score"
        style="@style/FattestText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_game_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/home"
        style="@style/FatText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/score"
        android:layout_centerHorizontal="true"
        android:text="@string/home" />

    <Button
        android:id="@+id/new_game"
        style="@style/FatText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/home"
        android:layout_centerHorizontal="true"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/leaderboards"
        style="@style/FatText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_game"
        android:layout_centerHorizontal="true"
        android:text="@string/leaderboards" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>
</RelativeLayout>
